# wasm_lite

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  MIGRATION.md  NOTICE  README.md
.github/workflows/: ci.yaml
crates/wasm_lite/: Cargo.toml
crates/wasm_lite/src/: console.rs  date.rs  interop.rs  lib.rs  macros.rs  performance.rs  thread.rs  value.rs
crates/wasm_lite_cli/: Cargo.toml
crates/wasm_lite_cli/src/: main.rs
crates/wasm_lite_codegen/: Cargo.toml
crates/wasm_lite_codegen/src/: descriptor.rs  exports.rs  generate.rs  interop.rs  lib.rs  wasm.rs
crates/wasm_lite_macro/: Cargo.toml
crates/wasm_lite_macro/src/: import.rs  lib.rs  ty.rs
crates/wasm_lite_std/: Cargo.toml  run-browser-tests.sh
crates/wasm_lite_std/src/: async_wait.rs  condvar.rs  guard.rs  hooks.rs  lib.rs  mpsc.rs  mutex.rs  rwlock.rs  spinlock.rs  stdlib.rs  sync_tests.rs  test_executor.rs  tests.rs  time.rs  wasm.rs  wasm_support.rs
crates/wasm_lite_std/src/condvar/: notify.rs  tests.rs  wait_async.rs  wait_block.rs  wait_spin.rs  wait_sync.rs
crates/wasm_lite_std/src/mpsc/: tests.rs
crates/wasm_lite_std/src/mutex/: async_impl.rs  block.rs  not_available.rs  spin.rs  sync_impl.rs
crates/wasm_lite_std/src/rwlock/: inner.rs  read.rs  tests.rs  write.rs
crates/wasm_lite_std/src/wasm/: executor.rs  thread_api.rs  wasm_utils.rs
crates/wasm_lite_std/tests/: browser.rs
docs/: analyze.py  binding-model.md  design-notes.md  interop.md  owners.py  roadmap.md  testing.md  threads-and-async.md  wasm-thread-ownership-census.md
examples/: hello.js
examples/async-demo/: Cargo.toml
examples/async-demo/src/: main.rs
examples/async-doctest-demo/: Cargo.toml
examples/async-doctest-demo/.cargo/: config.toml
examples/async-doctest-demo/src/: lib.rs
examples/async-fail-demo/: Cargo.toml
examples/async-fail-demo/src/: main.rs
examples/async-mutex-demo/: Cargo.toml
examples/async-mutex-demo/src/: main.rs
examples/async-pass-demo/: Cargo.toml
examples/async-pass-demo/src/: main.rs
examples/atomics-demo/: Cargo.toml
examples/atomics-demo/.cargo/: config.toml
examples/atomics-demo/src/: main.rs
examples/await-panic-demo/: Cargo.toml
examples/await-panic-demo/src/: main.rs
examples/doctest-demo/: Cargo.toml
examples/doctest-demo/src/: lib.rs
examples/exports-demo/: Cargo.toml
examples/exports-demo/src/: lib.rs
examples/hello-rust/: Cargo.toml
examples/hello-rust/.cargo/: config.toml
examples/hello-rust/src/: main.rs
examples/interop/: Cargo.toml
examples/interop/src/: main.rs
examples/interop/wb_widget/: Cargo.toml
examples/interop/wb_widget/src/: lib.rs
examples/panic-demo/: Cargo.toml
examples/panic-demo/src/: main.rs
examples/std-threads-demo/: Cargo.toml
examples/std-threads-demo/src/: main.rs
examples/tests-demo/: Cargo.toml
examples/tests-demo/.cargo/: config.toml
examples/tests-demo/src/: lib.rs
examples/tests-demo/tests/: passing.rs  suite.rs
examples/threads-demo/: Cargo.toml
examples/threads-demo/.cargo/: config.toml
examples/threads-demo/src/: main.rs
examples/worker-spawn-local-demo/: Cargo.toml
examples/worker-spawn-local-demo/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs  test_runner.rs  webdriver.rs
scripts/: check  check_all  clippy  docs  fmt  tests
scripts/native/: check  clippy  docs  tests
scripts/wasm32/: _env  check  clippy  docs  tests
