[package]
name = "wasm_lite"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
license = "MIT OR Apache-2.0"
description = "Minimal JS bindings for Rust compiled to wasm, with no runtime dependencies."
keywords = ["wasm", "webassembly", "javascript", "bindings", "wasm-bindgen"]
categories = ["wasm", "web-programming", "development-tools::ffi"]

[dependencies]
wasm_lite_macro = { path = "../wasm_lite_macro" }
# Optional: enables the `interop` module bridging to wasm-bindgen's JsValue.
# Use a permissive range; callers pin the exact version to match their CLI.
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm-bindgen = ["dep:wasm-bindgen"]
