[package]
name = "wasm_lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal JS bindings for Rust compiled to wasm, with no runtime dependencies."

keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
wasm_lite_macro = { path = "../wasm_lite_macro" }
# Optional: enables the `interop` module bridging to wasm-bindgen's JsValue.
# Use a permissive range; callers pin the exact version to match their CLI.
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm-bindgen = ["dep:wasm-bindgen"]
