[package]
name = "wasm_lite"
description = "Browser-first Rust/JavaScript bindings for wasm32-unknown-unknown, with real-browser tests/doctests, first-class threads, and zero runtime dependencies."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
wasm_lite_macro = { path = "../wasm_lite_macro" }
# Optional: enables the `interop` module bridging to wasm-bindgen's JsValue.
# Use a permissive range; callers pin the exact version to match their CLI.
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm-bindgen = ["dep:wasm-bindgen"]
