[package]
name = "wasm_lite_macro"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for wasm_lite (import!, #[export], js_class!, #[wasm_lite_test])."
keywords = ["wasm", "webassembly", "proc-macro", "bindings", "javascript"]
categories = ["wasm", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
wasm_lite = { path = "../wasm_lite" }
wasm_lite_std = { path = "../wasm_lite_std" }
