# wasm_lite_std — a std::thread + std::sync veneer for wasm_lite.
#
# Ported from drewcrawford's `wasm_safe_thread` (MIT OR Apache-2.0). The native
# backend (std::thread) is used verbatim; the wasm32 backend is being retargeted
# off wasm-bindgen onto wasm_lite's `thread::spawn` primitive + core atomics.
[package]
name = "wasm_lite_std"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "std::thread + std::sync veneer over wasm_lite (ported from wasm_safe_thread)."
categories = ["wasm", "concurrency", "asynchronous"]

[dependencies]
atomic-waker = "1.1.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm_lite = { path = "../wasm_lite" }

[dev-dependencies]
test_executors = "0.4.1"

# Browser test suite (wasm32, via the wasm_lite runner). harness = false because
# libtest doesn't run on wasm32-unknown-unknown; #[wasm_lite_test] + the runner
# drive it instead.
[[test]]
name = "browser"
harness = false
