[package]
name = "tests-demo"
version = "0.1.0"
edition = "2024"

# The unit-test harness (libtest) doesn't work on wasm; only the custom suite.
[lib]
test = false

[dependencies]
wasm_lite = { path = "../../crates/wasm_lite" }

# Harness-less integration tests: `#[wasm_lite_test]` + `test_main!` drive them.
[[test]]
name = "suite"
harness = false

[[test]]
name = "passing"
harness = false

[workspace]
