[package]
name = "tests-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm_lite = { path = "../../crates/wasm_lite" }

# Harness-less integration tests: `#[wasm_lite_test]` + `test_main!` drive them.
[[test]]
name = "suite"
harness = false

[[test]]
name = "passing"
harness = false

[workspace]
